# Permanent_Tree_Task_cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh
.github/workflows/: workflow.yml
persistent_tree/: CMakeLists.txt  main.cpp  persistent_tree.hpp  utils.hpp
tests/: CMakeLists.txt  unit-tests.cpp
tests/EndToEnd/: testgen.py  testrun.py
tests/EndToEnd/input_files/: test_01.in  test_02.in  test_03.in  test_04.in  test_05.in  test_06.in  test_07.in  test_08.in  test_09.in  test_10.in
tests/EndToEnd/output_files/: test_01.out  test_02.out  test_03.out  test_04.out  test_05.out  test_06.out  test_07.out  test_08.out  test_09.out  test_10.out
tests/Unit/: test.cpp
